--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,17 +1,14 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import Menu from '../components/Menu.astro';
+import Layout from "../layouts/Layout.astro";
+import Menu from "../components/Menu.astro";
 ---
 
 <Layout title="Kyodai Kai">
-	<header>
-		<Menu/>
-	</header>
-	<main>
-
-	</main>
-	<footer></footer>
+  <header>
+    <Menu />
+  </header>
+  <main></main>
+  <footer></footer>
 </Layout>
 
-<style>
-</style>
+<style></style>
